--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
 Django==5.0.3
+django-cors-headers==4.3.1
 django-environ==0.11.2
+djangorestframework==3.15.0
 psycopg==3.1.18
 psycopg-binary==3.1.18
 sqlparse==0.4.4
